# ChangeLog for app-emulation/vice
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vice/ChangeLog,v 1.11 2004/03/30 07:42:38 mr_bones_ Exp $

  29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  files/1.12-po-Makefile.patch, files/1.13-po-Makefile.patch:
  remove unused patches

  29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> vice-1.12-r1.ebuild,
  vice-1.13.ebuild:
  remove older ebuilds

*vice-1.14 (07 Feb 2004)

  07 Feb 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bump #40434 by Chris Aniszczyk.

*vice-1.13 (03 Oct 2003)

  03 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> vice-1.13.ebuild:
  DESTDIR fix for bug 32544; add prepgamesdirs

  03 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org> vice-1.13.ebuild,
  files/1.13-po-Makefile.patch:
  version bump

*vice-1.12-r1 (13 Jul 2003)

  13 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Fixed up nls support #24041, added optional arts support and added games.eclass support.

*vice-1.12 (24 Jun 2003)

  24 Jun 2003; Hanno Boeck <hanno@gentoo.org> vice-1.12.ebuild:
  Version bump.

*vice-1.11 (23 Mar 2003)

  23 Mar 2003; Hanno Boeck <hanno@gentoo.org> vice-1.11.ebuild:
  New version.

*vice-1.10 (08 Nov 2002)

  08 Nov 2002; Hanno Boeck <hanno@gentoo.org> vice-1.10.ebuild :
  New version.
  Also fixed dependencies (no need to depend on full gnome).

*vice-1.9 (03 Aug 2002)

  03 Aug 2002; Daniel Ahlberg <aliz@gentoo.org> vice-1.9.ebuild :
  Initial import. Ebuild submitted by Matt Matthews <jvm@linuxgames.com>.