@@ -1,4 +1,5 @@
-MD5 4c6997b21744b58c2794d6a09f79e12d ChangeLog 1592
+MD5 ff2dce4c36db3a40074e9a2598a332a3 ChangeLog 1682
+MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 MD5 a313f79b2af4b0767b678210c3fb8f49 vice-1.14.ebuild 1303
 MD5 962c8cfd8a9a308b180e1a26c4973625 files/1.14-po-Makefile.patch 560
 MD5 eca7586b8ef1c0d8665368c0328f9250 files/digest-vice-1.14 62
