@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/vice
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vice/ChangeLog,v 1.11 2004/03/30 07:42:38 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vice/ChangeLog,v 1.12 2004/03/30 07:47:04 mr_bones_ Exp $
+
+  29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml:
+  add metadata file
 
   29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
   files/1.12-po-Makefile.patch, files/1.13-po-Makefile.patch:
